# RBE_595_Vison-based_Manipulation_Project

./: .gitignore  README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/capgrasp_itf/share/capgrasp_itf/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/capgrasp_srv_cli/share/capgrasp_srv_cli/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/executive_smach/share/executive_smach/: local_setup.sh  package.sh
ros2_ws/install/gazebo_ros2_control/share/gazebo_ros2_control/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/: README.md  state_planner.py
ros2_ws/src/PandaRobot/panda_ros2_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/capgrasp_itf/: CMakeLists.txt  package.xml
ros2_ws/src/capgrasp_itf/srv/: CAPGrasp.srv
ros2_ws/src/capgrasp_srv_cli/: package.xml  setup.cfg  setup.py
ros2_ws/src/capgrasp_srv_cli/capgrasp_srv_cli/: grasp_client.py  grasp_service.py
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/srv/: Grasp.srv
ros2_ws/src/ggcnn_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/ggcnn_ros2/srv/: Grasp.srv
ros2_ws/src/panda_planning/: package.xml  setup.cfg  setup.py
ros2_ws/src/panda_planning/panda_planning/: controller.py  sequencer.py
ros2_ws/src/pcl_transform/: CMakeLists.txt  package.xml
ros2_ws/src/pcl_transform/src/: camera_to_world.cpp  downsample.cpp  object_segmentation.cpp  segmentation_process.cpp
ros2_ws/src/ros2_client/: package.xml  setup.py
ros2_ws/src/ros2_client/ros2_client/: move_xyzw_client.py  panda_task_sequence.py
ros2_ws/src/ros2_execution/: CMakeLists.txt
ros2_ws/src/ros2_execution/programs/: grocery.txt  panda_reset.txt  panda_test.txt
ros2_ws/src/ros2_execution/scripts/: execution_node.py  ros2_execution.py
ros2_ws/src/ros2_ggcnn/: package.xml  setup.py
ros2_ws/src/ros2_ggcnn/ros2_ggcnn/: ggcnn_client_node.py  ggcnn_service_node.py  utils.py
ros2_ws/src/segmentation/: setup.py
ros2_ws/src/segmentation/segmentation/: object_seg.py
ros2_ws/src/sequencer/: package.xml  setup.cfg  setup.py
ros2_ws/src/sequencer/launch/: sequencer_client.launch.py  supporting_services.launch.py
ros2_ws/src/sequencer/sequencer/: controller_service.py  sequencer_client.py  statemachinetest.py
ros2_ws/src/sequencer_itf/: CMakeLists.txt
ros2_ws/src/yolo/: setup.py
ros2_ws/src/yolo/yolo/: object_detection.py
ros2_ws/src/yolo_finetune/: reduce_brightness.py  yolo_finetune.py  yolo_seg_test.py  yolo_test.py
ros2_ws/src/yolo_finetune/ycb_foods/: README.dataset.txt  README.roboflow.txt  data.yaml
(+1213 files in other folders)
